force-app/main/default/objects/numm__Country__c/numm__Country__c.object-meta.xml
<CustomObject>
    <label>Pays</label>
    <nameField>
        <label>Pays</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>