force-app/main/default/objects/numm__Country__c/fields/numm__FormatSepa__c.field-meta.xml
<CustomField>
    <fullName>numm__FormatSepa__c</fullName>
    <description>Format SEPA:
B = code banque, S = code groupe de comptes, C = numéro de compte,G = code guichet, K = clef</description>
    <inlineHelpText>Une aide existe sur wikipédia en recherchant International Bank Account Number, exemple pour la France : FRkk BBBB BGGG GGCC CCCC CCCC CKK</inlineHelpText>
    <label>FormatSepa</label>
    <length>34</length>
    <type>Text</type>
</CustomField>