force-app/main/default/objects/numm__Country__c/fields/numm__IsoPays__c.field-meta.xml
<CustomField>
    <fullName>numm__IsoPays__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Préciser le code Iso du pays</inlineHelpText>
    <label>Code iso Pays</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>