force-app/main/default/objects/numm__Country__c/fields/numm__IsZoneSEPA__c.field-meta.xml
<CustomField>
    <fullName>numm__IsZoneSEPA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cocher la case si le pays est en zone SEPA</inlineHelpText>
    <label>Zone SEPA</label>
    <type>Checkbox</type>
</CustomField>