force-app/main/default/objects/numm__Country__c/fields/numm__Tech_PostInstall__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_PostInstall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_PostInstall</label>
    <type>Checkbox</type>
</CustomField>