force-app/main/default/objects/numm__Country__c/validationRules/numm__FormatIBanObligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__FormatIBanObligatoire</fullName>
    <active>true</active>
    <description>Si zone SEPA, format IBAN obligatoire</description>
    <errorConditionFormula>AND(numm__IsZoneSEPA__c=true,numm__FormatSepa__c =null)</errorConditionFormula>
    <errorMessage>Format IBAN obligatoire</errorMessage>
</ValidationRule>